<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <!--0.166 between each piece-->

    <EditText
        android:id="@+id/SText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/distanceText"
        android:inputType="numberSigned|numberDecimal"
        android:nextFocusDown="@+id/UText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <EditText
        android:id="@+id/UText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/initialVelocityText"
        android:inputType="numberSigned|numberDecimal"
        android:nextFocusDown="@+id/VText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/VText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/finalVelocityText"
        android:inputType="numberSigned|numberDecimal"
        android:nextFocusDown="@+id/AText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/AText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/accelerationText"
        android:inputType="numberSigned|numberDecimal"
        android:nextFocusDown="@+id/TText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/TText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timeText"
        android:inputType="numberSigned|numberDecimal"
        android:nextFocusDown="@+id/computeButton"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <ImageButton
        android:id="@+id/clearSButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="Clear Distance"
        android:nextFocusDown="@+id/SText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/clearUButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="Clear Initial Velocity"
        android:nextFocusDown="@+id/UText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/clearVButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="Clear Final Velocity"
        android:nextFocusDown="@+id/VText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/clearAButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="Clear Acceleration"
        android:nextFocusDown="@+id/AText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@android:drawable/btn_dialog" />

    <ImageButton
        android:id="@+id/clearTButton"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:contentDescription="Clear Time"
        android:nextFocusDown="@+id/TText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        app:srcCompat="@android:drawable/btn_dialog" />

</android.support.constraint.ConstraintLayout>
